<resources>
    <string name="app_name">Academic score</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course">Course :</string>
    <string name="semester">Semester :</string>
    <string name="ctmt">Final/CT/WT :</string>
    <string name="show">show</string>
    <string name="reset">reset</string>
    <string name="home">Home</string>
    <string name="result">Result</string>
    <string name="contact">Contact</string>
    <string name="my_profile">My Profile</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string-array name="courses">
        <item>Please select an option</item>
        <item>BE (Computer Science and Engineering)</item>
    </string-array>
    <string-array name="semester">
        <item>Please select an option</item>
        <item>Semester 1</item>
        <item>Semester 2</item>
        <item>Semester 3</item>
        <item>Semester 4</item>
        <item>Semester 5</item>
        <item>Semester 6</item>
        <item>Semester 7</item>
        <item>Semester 8</item>
    </string-array>
    <string-array name="test">
        <item>Please select an option</item>
        <item>Final</item>
        <item>CT</item>
        <item>WT</item>
    </string-array>
    <string-array name="ct">
        <item>Please select an option</item>
        <item>Class Test 1</item>
        <item>Class test 2</item>
    </string-array>
    <string-array name="wt">
        <item>Please select an option</item>
        <item>Weekly Test 1</item>
        <item>Weekly Test 2</item>
        <item>Weekly Test 3</item>
        <item>Weekly Test 4</item>
        <item>Weekly Test 5</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="submit">submit</string>
    <string name="name_of_student">Name</string>
    <string name="enroll_of_student">Enroll</string>
    <string name="email_of_student">Email-ID</string>
    <string name="phone_of_student">Phone</string>
    <string name="notification">Notification</string>
    <string name="back">back</string>
    <string name="or">OR</string>
    <string name="get_pass_link">reset password</string>
    <string name="wt_activity_label">Weekly test Results</string>
    <string name="ct_activity_label">Class test Results</string>
    <string name="result_activity_label">Final Result</string>
</resources>
